--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,3 +11,5 @@ COPY . .
 RUN npx prisma generate
 
 EXPOSE 3000
+
+CMD ["sh", "-c", "npx prisma migrate deploy && npm run prisma:seed && npm run start:dev"]
